--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     }
   </script>
   <script defer data-domain="rubyonrails.org" src="https://plausible.io/js/script.js"></script>
-  <link rel="icon" href="/ruby-website/assets/images/favicon.ico" />
-  <link rel="apple-touch-icon" type="image/png" href="/ruby-website/assets/images/apple-touch-icon.png">
-  <link rel="stylesheet" href="/ruby-website/assets/css/style.css">
+  <link rel="icon" href="/assets/images/favicon.ico" />
+  <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="alternate" type="application/rss+xml"  href="/feed.xml" title="The official Neibortech blog">
 </head>
 
@@ -115,7 +115,7 @@
   <div class="video common-background--grey common-shape--top-white-down-left">
     <div class="container">
       <div class="video__embed">
-        <video poster="/ruby-website/assets/videos/rails7-screencast-poster.jpg" width="1920" height="1080">
+        <video poster="/assets/videos/rails7-screencast-poster.jpg" width="1920" height="1080">
           <source src="" type="video/mp4">
           <track kind="captions" label="English" src="/assets/videos/rails7-screencast-english.vtt" srclang="en" default="false">
         </video>
@@ -140,94 +140,94 @@
         
         <div class="trusted__block">
           <a href="https://basecamp.com" aria-label="Basecamp">
-            <img src="/ruby-website/assets/images/logo-basecamp.svg" alt="Basecamp" />
+            <img src="/assets/images/logo-basecamp.svg" alt="Basecamp" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://hey.com" aria-label="HEY">
-            <img src="/ruby-website/assets/images/logo-hey.svg" alt="HEY" />
+            <img src="/assets/images/logo-hey.svg" alt="HEY" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://github.com" aria-label="GitHub">
-            <img src="/ruby-website/assets/images/logo-github.svg" alt="GitHub" />
+            <img src="/assets/images/logo-github.svg" alt="GitHub" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://shopify.com" aria-label="Shopify">
-            <img src="/ruby-website/assets/images/logo-shopify.svg" alt="Shopify" />
+            <img src="/assets/images/logo-shopify.svg" alt="Shopify" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://twitch.tv" aria-label="Twitch">
-            <img src="/ruby-website/assets/images/logo-twitch.svg" alt="Twitch" />
+            <img src="/assets/images/logo-twitch.svg" alt="Twitch" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://dribbble.com" aria-label="Dribbble">
-            <img src="/ruby-website/assets/images/logo-dribbble.svg" alt="Dribbble" />
+            <img src="/assets/images/logo-dribbble.svg" alt="Dribbble" />
           </a>
         </div>
 
         <!--
         <div class="trusted__block">
           <a href="https://hulu.com" aria-label="Hulu">
-            <img src="/ruby-website/assets/images/logo-hulu.svg" alt="Hulu" />
+            <img src="/assets/images/logo-hulu.svg" alt="Hulu" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://zendesk.com" aria-label="Zendesk">
-            <img src="/ruby-website/assets/images/logo-zendesk.svg" alt="Zendesk" />
+            <img src="/assets/images/logo-zendesk.svg" alt="Zendesk" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://airbnb.com" aria-label="Airbnb">
-            <img src="/ruby-website/assets/images/logo-airbnb.svg" alt="Airbnb" />
+            <img src="/assets/images/logo-airbnb.svg" alt="Airbnb" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://squareup.com" aria-label="Square">
-            <img src="/ruby-website/assets/images/logo-square.svg" alt="Square" />
+            <img src="/assets/images/logo-square.svg" alt="Square" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://kickstarter.com" aria-label="Kickstarter">
-            <img src="/ruby-website/assets/images/logo-kickstarter.svg" alt="Kickstarter" />
+            <img src="/assets/images/logo-kickstarter.svg" alt="Kickstarter" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://heroku.com" aria-label="Heroku">
-            <img src="/ruby-website/assets/images/logo-heroku.svg" alt="Heroku" />
+            <img src="/assets/images/logo-heroku.svg" alt="Heroku" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://coinbase.com" aria-label="Coinbase">
-            <img src="/ruby-website/assets/images/logo-coinbase.svg" alt="Coinbase" />
+            <img src="/assets/images/logo-coinbase.svg" alt="Coinbase" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://soundcloud.com" aria-label="Soundcloud">
-            <img src="/ruby-website/assets/images/logo-soundcloud.svg" alt="Soundcloud" />
+            <img src="/assets/images/logo-soundcloud.svg" alt="Soundcloud" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://cookpad.com" aria-label="Cookpad">
-            <img src="/ruby-website/assets/images/logo-cookpad.svg" alt="Cookpad" />
+            <img src="/assets/images/logo-cookpad.svg" alt="Cookpad" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://www.doximity.com" aria-label="Doximity">
-            <img src="/ruby-website/assets/images/logo-doximity.svg" alt="Doximity" />
+            <img src="/assets/images/logo-doximity.svg" alt="Doximity" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://www.intercom.com" aria-label="Intercom">
-            <img src="/ruby-website/assets/images/logo-intercom.svg" alt="Intercom" />
+            <img src="/assets/images/logo-intercom.svg" alt="Intercom" />
           </a>
         </div>
         <div class="trusted__block">
           <a href="https://www.fleetio.com" aria-label="Fleetio">
-            <img src="/ruby-website/assets/images/logo-fleetio.svg" alt="Fleetio" />
+            <img src="/assets/images/logo-fleetio.svg" alt="Fleetio" />
           </a>
         </div>
         -->
