--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:description" content="we are a group of university students, we do sicnece communication and geophysical instrumentation in China" />
   <meta name="twitter:image" content="" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:creator" content="@rails" />
+  <meta name="twitter:creator" content="@" />
   <meta name="twitter:image:alt" content="Neibortech" />
 
   <script type="application/ld+json">
