Update and rename about_us to about_us.html

--- a/about/about_us.html
+++ b/about/about_us.html
@@ -1,3 +1,8 @@
+<!doctype html>
+
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN" class="no-js">
+
 
 <head>
   <title>Neibortech &mdash; we are a group of university students, we do sicnece communication and geophysical instrumentation in China</title>
