--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       <div>
 
         <ul>
-            <li><a href=""><span>主页</span></a></li>
+            <li><a href="https://www.neibortech.xyz"><span>主页</span></a></li>
           
-            <li><a href=""><span>服务</span></a></li>
+            <li><a href="/services/hardware_software.html"><span>服务</span></a></li>
           
             <li><a href=""><span>支持</span></a></li>
         </ul>
