--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           
             <li><a href=""><span>关于</span></a></li>
           
-            <li><a href=""><span>联系</span></a></li>
+            <li><a href="/news/products.html"><span>联系</span></a></li>
         </ul>
 
       </div>
