--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         </ul>
 
         <ul>
-            <li><a href=""><span>新闻</span></a></li>
+            <li><a href="/news/product.html"><span>新闻</span></a></li>
           
             <li><a href=""><span>关于</span></a></li>
           
-            <li><a href="/news/products.html"><span>联系</span></a></li>
+            <li><a href=""><span>联系</span></a></li>
         </ul>
 
       </div>
