--- a/services/hardware_software.html
+++ b/services/hardware_software.html
@@ -81,7 +81,7 @@
         </ul>
 
         <ul>
-            <li><a href=""><span>新闻</span></a></li>
+            <li><a href="/news/product.html"><span>新闻</span></a></li>
           
             <li><a href=""><span>关于</span></a></li>
           
