--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <ul>
             <li><a href="/news/product.html"><span>新闻</span></a></li>
           
-            <li><a href=""><span>关于</span></a></li>
+            <li><a href="/newsroom/newslanding.html"><span>关于</span></a></li>
           
             <li><a href=""><span>联系</span></a></li>
         </ul>
