--- a/newsroom/newslanding.html
+++ b/newsroom/newslanding.html
@@ -44,7 +44,7 @@
   <script defer data-domain="rubyonrails.org" src="https://plausible.io/js/script.js"></script>
   <link rel="icon" href="/ruby-website/assets/images/favicon.ico" />
   <link rel="apple-touch-icon" type="image/png" href="/ruby-website/assets/images/apple-touch-icon.png">
-  <link rel="stylesheet" href="/ruby-website/assets/css/style.css">
+  <link rel="stylesheet" href="/newsroom/styles/style.css">
   <link rel="alternate" type="application/rss+xml"  href="/feed.xml" title="The official Neibortech blog">
   <link rel="stylesheet" href="/newsroom/styles/site.built.css">
   <link rel="stylesheet" href="/newsroom/styles/landing.built.css"> 
