--- a/newsroom/newslanding.html
+++ b/newsroom/newslanding.html
@@ -42,8 +42,8 @@
     }
   </script>
   <script defer data-domain="rubyonrails.org" src="https://plausible.io/js/script.js"></script>
-  <link rel="icon" href="/ruby-website/assets/images/favicon.ico" />
-  <link rel="apple-touch-icon" type="image/png" href="/ruby-website/assets/images/apple-touch-icon.png">
+  <link rel="icon" href="/assets/images/favicon.ico" />
+  <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png">
   <link rel="stylesheet" href="/newsroom/styles/style.css">
   <link rel="alternate" type="application/rss+xml"  href="/feed.xml" title="The official Neibortech blog">
   <link rel="stylesheet" href="/newsroom/styles/site.built.css">
@@ -100,7 +100,7 @@
 
 
 <figure style="display:none" class="share-image">	    	
-  <img src="/ruby-website/apple/images/device.png">
+  <img src="/newsroom/images/device.png">
 </figure>
 
 <aside class="desktop-notification" aria-label="Newsroom Desktop Notifications opt-in">
