--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
           <div class="heading__headline common-headline">
             <h1>使命与目标</h1>
-            <h4>芦广今珠仲恕廷黎沫塑，略昔夏逸驯估以汞既虚止贴躁衬暴。<strong> 传播科学思想, 地球物理装备 </strong></h4>
+            <h4>微震监测技术植根于人类对天然地震近百年的探索研究<strong> 传播科学思想, 地球物理装备 </strong></h4>
           </div>
 
           <div class="heading__button">
@@ -128,7 +128,7 @@
       <div class="heading__body">
         <div class="heading__headline common-headline">
           <h1>服务及设备</h1>
-          <h4>功桶文掏遂荒貌旦记槐诞恨洪验艳钦果嘲状勇臣虚屯踪恼临班展齐王饱逝级联经微柿零搬钮帽抓</h4>
+          <h4>微震监测技术是一种用于地震监测和地质勘探的先进技术。它主要涉及对微小地震事件的监测和分析，这些地震事件的震级通常较低，难以被人类感知，但它们可以提供有关地下构造和地震活动的重要信息。</h4>
         </div>
       </div>
     </div>
@@ -240,7 +240,7 @@
     <div class="container">
       <div class="text__body">
         <div class="text__content common-content common-content--size-large">
-          <p><strong>私密兜椭覆泳爆汛松</strong> 消身遂虱敬吞货童逝疫愁辩慰凑吐挥荠下钨志咂悉予</p>
+          <p><strong>微震监测技术</strong> 通过对采集到的数据进行分析，可以确定微小地震事件的震级、震源深度、地震发生的时间和位置等信息</p>
         </div>
       </div>
     </div>
@@ -251,9 +251,9 @@
     <div class="container">
       <div class="heading__body">
         <div class="heading__headline common-headline">
-          <h1>述泊束宏您</h1>
+          <h1>能源开发，资源勘探</h1>
 
-          <h4>向糙披读践中歇林怨兆孵岔寮芦迪白融垦徒端惕扩伸恕硫翟 <a href="https://neibortech.org">牌渠直掠吃砧奉那疤星速上胞量顷始岳扑</a>, 汛松同闲美鸣穗泻何奸嫌播脂牛劫…消身遂虱敬吞</h4>
+          <h4>微震监测技术用于监测地震活动，可以帮助科学家了解地震活动的分布、频率和趋势，提前警示可能的地震风险，以减少地震带来的损害。 <a href="https://neibortech.org">牌渠直掠吃砧奉那疤星速上胞量顷始岳扑</a>, 汛松同闲美鸣穗泻何奸嫌播脂牛劫…消身遂虱敬吞</h4>
         </div>
 
         <div class="heading__button">
@@ -268,12 +268,12 @@
     <div class="container">
       <div class="heading__body">
         <div class="heading__headline common-headline">
-          <h1>汛松同闲鸣泻</h1>
-          <h4><strong>汛松同闲美鸣穗泻何奸嫌</strong> 汛松同闲美鸣穗泻何奸嫌月膜儿职抹播脂牛劫…消身遂虱敬吞</h4>
+          <h1>能源开发，资源勘探</h1>
+          <h4><strong>微震监测技术在地球科学、地质工程</strong> 微震监测技术用于监测地震活动，可以帮助科学家了解地震活动的分布、频率和趋势，提前警示可能的地震风险，以减少地震带来的损害。</h4>
         </div>
 
         <div class="heading__content heading__content--has-headline common-content common-content--size-large">
-          <p>浇轲嫩墩哥惩乒违柯惕葛提胺第缚饿棕灯彩诉胚砚台弗链右骨翁防赌钴孟阎桃庸骂青籼叙忠回扒痛。让撮嗨苹尔饰认惕色肛拣宝戳熹虹界融汽反允幅腥牲启迭项丧想董月咬左片铺珊。耶宵掘萘吭木含点旬肃耗斧访番老亮锄新仿俯剧叠纳蛇贤庙猎酸？展棒疾脂衅讨伴滩货媳疮悄毫霸剧养粮，玄！</p>
+          <p>微震监测技术是一种用于监测和分析微小地震事件的高精度技术。这些微小地震事件通常具有较低的震级，难以被人类感知，但它们提供了有关地下地质构造和地震活动的重要信息。微震监测技术具有高度精确和多领域应用的优势，对于地下地质信息的获取和地震活动的监测提供了强大的工具，有助于提高资源管理和地质风险管理的效率和可靠性。</p>
         </div>
       </div>
     </div>
@@ -389,11 +389,11 @@
     <div class="container">
       <div class="heading__body">
         <div class="heading__headline common-headline">
-          <h1>为性能而优化</h1>
+          <h1>应用领域及方案</h1>
         </div>
 
         <div class="heading__content heading__content--has-headline common-content common-content--size-large">
-          <p>蚊晰氢进着定描系束钙吉彭凉护鸣杜撇绵昨！烃奏什窑戏 <strong>闲霸转燃辽症睡喻捧肛乡诞宿尽势仇</strong> 壤储扔摊址纹蟹恒蒜做籽仔镁玄窄案榄疆唐为疯惊翼毫冯树灌，娃零燕定穗喀洼孟天押厄轴迭逝逃</p>
+          <p>微震监测系统通常具备实时数据采集和分析功能 <strong>实时监测、高分辨率，允许及时识别和响应地下地质变化和地震活动</strong> 微震监测设备具有高度灵敏的传感器，能够探测并记录微小的地震事件，包括震级较低的地震，这些事件传统的地震监测设备可能无法捕获。</p>
         </div>
 
         <div class="heading__button">
@@ -407,7 +407,7 @@
     <div class="container">
       <div class="heading__body">
         <div class="heading__headline common-headline">
-          <h1>让我们开始吧</h1>
+          <h1>获取最新消息</h1>
         </div>
       </div>
     </div>
@@ -428,7 +428,7 @@
               </div>
 
               <div class="card__content">
-                <p>瓜永氰圈浩龟禾贫妨因巢</p>
+                <p>矿山微震监测手册</p>
               </div>
             </div>
           </a>
@@ -442,11 +442,11 @@
               </div>
 
               <div class="card__headline">
-                <h3>贡献代码</h3>
+                <h3>联系专家</h3>
               </div>
 
               <div class="card__content">
-                <p>瓜永氰圈浩龟禾贫妨因巢</p>
+                <p>获取现场专家的支持</p>
               </div>
             </div>
           </a>
@@ -464,7 +464,7 @@
               </div>
 
               <div class="card__content">
-                <p>瓜永氰圈浩龟禾贫妨因巢</p>
+                <p>获取我们的最新进展</p>
               </div>
             </div>
           </a>
