--- a/services/hardware_software.html
+++ b/services/hardware_software.html
@@ -101,7 +101,7 @@
 
           <div class="heading__headline common-headline">
             <h1>服务与支持</h1>
-            <h4> Our services <strong> 传播科学思想, 地球物理装备 </strong></h4>
+            <h4> Our services <br> <strong> 传播科学思想, 地球物理装备 </strong></h4>
           </div>
 
           <div class="heading__button">
@@ -115,9 +115,9 @@
   <div class="video common-background--grey common-shape--top-white-down-left">
     <div class="container">
       <div class="video__embed">
-        <video poster="/assets/videos/rails7-screencast-poster.jpg" width="1920" height="1080">
+        <video poster="/services/images/fdsouthdeep35.webp" width="1920" height="1080">
           <source src="" type="video/mp4">
-          <track kind="captions" label="English" src="/assets/videos/rails7-screencast-english.vtt" srclang="en" default="false">
+          <track kind="captions" label="English" src="" srclang="en" default="false">
         </video>
       </div>
     </div>
