--- a/newsroom/newslanding.html
+++ b/newsroom/newslanding.html
@@ -100,7 +100,7 @@
 
 
 <figure style="display:none" class="share-image">	    	
-  <img src="/newsroom/images/device.png">
+  <img src="/news/assets/images/device-landing.jpg">
 </figure>
 
 <aside class="desktop-notification" aria-label="Newsroom Desktop Notifications opt-in">
@@ -284,7 +284,7 @@
                     <div class="tile__media" aria-hidden="true">
                     <style type="text/css">
                         .image-hero-0af48b9758ae7146ff0e4818ffb68d13 {
-                            background: url(/news/assets/images/device.png) no-repeat top;
+                            background: url(/news/assets/images/device-landing.jpg) no-repeat top;
                             background-size: cover;
                             height: 100%;
                         }
@@ -292,12 +292,12 @@
                         (-webkit-min-device-pixel-ratio: 1.5),
                         (min-resolution: 144dpi) {
                             .image-hero-0af48b9758ae7146ff0e4818ffb68d13 {
-                                background-image: url(/news/assets/images/device.png);
+                                background-image: url(/news/assets/images/device-landing.jpg);
                             }
                         }
                         @media only screen and (max-width: 734px) {
                             .image-hero-0af48b9758ae7146ff0e4818ffb68d13 {
-                                background-image: url(/news/assets/images/device.png);
+                                background-image: url(/news/assets/images/device-landing.jpg);
                                 height: 100%;
                             }
                         }
@@ -306,7 +306,7 @@
                         (max-width: 734px) and (-webkit-min-device-pixel-ratio: 1.5),
                         (max-width: 734px) and (min-resolution: 144dpi) {
                             .image-hero-0af48b9758ae7146ff0e4818ffb68d13 {
-                                background-image: url(/news/assets/images/device.png);
+                                background-image: url(/news/assets/images/device-landing.jpg);
                             }
                         }
                     </style>
