--- a/newsroom/newslanding.html
+++ b/newsroom/newslanding.html
@@ -384,7 +384,7 @@
                         <div class="tile__description" aria-hidden="true">
                             <div class="tile__head">
                                 <div class="tile__category">新闻稿</div>
-                                <div class="tile__headline">Neibortech 湖北某磷矿现场考察 </div>
+                                <div class="tile__headline">Neibortech 前往湖北某磷矿进行现场考察 </div>
                             </div>
 
                             
@@ -474,10 +474,10 @@
             </li>
 
 
-            <li role="listitem" class="tile-item item-2up nr-scroll-animation nr-scroll-animation--on" data-analytics-activitymap-region-id="来自 neibortech 支持的碳中和教育项目的新一批绿色创新者开启他们的新篇章" data-component-list="ModalQuickRead" style="--nr-animation-transform-y: 20%;">
-                    <button type="button" class="tile  tile-2up tile-quick-read" data-analytics-click="prop3:open modal | quick read - 来自 neibortech 支持的碳中和教育项目的新一批绿色创新者开启他们的新篇章" data-analytics-title="open modal | quick read - 来自 neibortech 支持的碳中和教育项目的新一批绿色创新者开启他们的新篇章" data-analytics-intrapage-link="" aria-label="来自 neibortech 支持的碳中和教育项目的新一批绿色创新者开启他们的新篇章 - 速读 - 发表时间 2023 年 11 月 1 日">
+            <li role="listitem" class="tile-item item-2up nr-scroll-animation nr-scroll-animation--on" data-analytics-activitymap-region-id="来自 Neibortech 支持的碳中和项目开启他们的新篇章" data-component-list="ModalQuickRead" style="--nr-animation-transform-y: 20%;">
+                    <button type="button" class="tile  tile-2up tile-quick-read" data-analytics-click="prop3:open modal | quick read - 来自 Neibortech 支持的碳中和项目开启他们的新篇章" data-analytics-title="open modal | quick read - 来自 Neibortech 支持的碳中和项目开启他们的新篇章" data-analytics-intrapage-link="" aria-label="来自 Neibortech 支持的碳中和项目开启他们的新篇章 - 速读 - 发表时间 2023 年 11 月 1 日">
                         <div class="chiclet image tile-quick-read-image">
-                            <img srcset="https://www.apple.com.cn/newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg, /newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg 2x" src="https://www.apple.com.cn/newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg" alt="新一批绿色创新者从 Apple 支持的碳中和教育项目毕业 ">
+                            <img srcset="https://www.apple.com.cn/newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg, /newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg 2x" src="https://www.apple.com.cn/newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg" alt="来自 Neibortech 支持的碳中和项目开启他们的新篇章 ">
                         </div>
 
                         <div class="tile__description" aria-hidden="true">
@@ -702,7 +702,7 @@
                         <div class="tile__description" aria-hidden="true">
                             <div class="tile__head">
                                 <div class="tile__category">新闻稿</div>
-                                <div class="tile__headline">NeiborTech 发布 G2 &nbsp; H2 &nbsp; Pro 采集仪 </div>
+                                <div class="tile__headline">NeiborTech 发布 G2 &nbsp;H2 &nbsp; Pro 采集仪 </div>
                             </div>
 
                             
