--- a/newsroom/newslanding.html
+++ b/newsroom/newslanding.html
@@ -477,7 +477,7 @@
             <li role="listitem" class="tile-item item-2up nr-scroll-animation nr-scroll-animation--on" data-analytics-activitymap-region-id="来自 Neibortech 支持的碳中和项目开启他们的新篇章" data-component-list="ModalQuickRead" style="--nr-animation-transform-y: 20%;">
                     <button type="button" class="tile  tile-2up tile-quick-read" data-analytics-click="prop3:open modal | quick read - 来自 Neibortech 支持的碳中和项目开启他们的新篇章" data-analytics-title="open modal | quick read - 来自 Neibortech 支持的碳中和项目开启他们的新篇章" data-analytics-intrapage-link="" aria-label="来自 Neibortech 支持的碳中和项目开启他们的新篇章 - 速读 - 发表时间 2023 年 11 月 1 日">
                         <div class="chiclet image tile-quick-read-image">
-                            <img srcset="https://www.apple.com.cn/newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg, /newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg 2x" src="https://www.apple.com.cn/newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg" alt="来自 Neibortech 支持的碳中和项目开启他们的新篇章 ">
+                            <img srcset="https://www.apple.com.cn/newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg, /newsroom/cn/images/quick-read-logos/Apple-Quick-Read-Carbon-Neutral-Education-Program.jpg.square_social.jpg 2x" src="/news/assets/images/office1.jpg" alt="来自 Neibortech 支持的碳中和项目开启他们的新篇章 ">
                         </div>
 
                         <div class="tile__description" aria-hidden="true">
