--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           
             <li><a href="/news/product.html"><span>关于</span></a></li>
           
-            <li><a href="https://www.neibortech.xyz"><span>联系</span></a></li>
+            <li><a href="/about/about_us"><span>联系</span></a></li>
         </ul>
 
       </div>
