--- a/about/about_us.html
+++ b/about/about_us.html
@@ -289,7 +289,7 @@
                              }
                          }
                     </style>
-                    <a href="https://safe.cumt.edu.cn/info/1060/14889.htm" class="block" data-analytics-region="learn more">
+                    <a href="https://safe.cumt.edu.cn/info/1060/14889.htm" target="_blank" class="block" data-analytics-region="learn more">
                         <figure class="profile-image image-16123cbddbb9affd118ad9fc1c78c0d1" role="presentation">
                             <figcaption class="profile-caption">
                                 <h3 class="typography-body block-link profile-name">Enyuan Wang</h3>
@@ -319,7 +319,7 @@
                              }
                          }
                     </style>
-                    <a href="https://gdue.cumt.edu.cn/info/1032/3871.htm" class="block" data-analytics-region="learn more">
+                    <a href="https://gdue.cumt.edu.cn/info/1032/3871.htm" target="_blank" class="block" data-analytics-region="learn more">
                         <figure class="profile-image image-8957539aa282e1a6c74d9efeb1aa5b7e" role="presentation">
                             <figcaption class="profile-caption">
                                 <h3 class="typography-body block-link profile-name">Tony Chen</h3>
@@ -349,7 +349,7 @@
                              }
                          }
                     </style>
-                    <a href="/leadership/isabel-ge-mahe/" class="block" data-analytics-region="learn more">
+                    <a href="https://twitter.com/main000000" target="_blank" class="block" data-analytics-region="learn more">
                         <figure class="profile-image image-1f5b423773a445efd9e72faba66b0a51" role="presentation">
                             <figcaption class="profile-caption">
                                 <h3 class="typography-body block-link profile-name">Kevin Jia</h3>
@@ -380,7 +380,7 @@
                              }
                          }
                     </style>
-                    <a href="https://safe.cumt.edu.cn" class="block" data-analytics-region="learn more">
+                    <a href="https://safe.cumt.edu.cn" target="_blank" class="block" data-analytics-region="learn more">
                         <figure class="profile-image image-7b290186898785d598d6df391ed51cc8" role="presentation">
                             <figcaption class="profile-caption">
                                 <h3 class="typography-body block-link profile-name">XY Zhang </h3>
