--- a/about/about_us.html
+++ b/about/about_us.html
@@ -269,6 +269,7 @@
 	<section class="section section-vpprofiles " data-analytics-section-engagement="name:vp profiles">
     <div class="section-content">
         <div class="profile-list-wrapper">
+	<h1 class="typography-subsection-headline" lang="zh-CN">管理层简介</h1>
             <ul class="profile-list">
 
                 <li class="profile-list-item">                    
@@ -383,14 +384,47 @@
                     <a href="https://safe.cumt.edu.cn" target="_blank" class="block" data-analytics-region="learn more">
                         <figure class="profile-image image-7b290186898785d598d6df391ed51cc8" role="presentation">
                             <figcaption class="profile-caption">
-                                <h3 class="typography-body block-link profile-name">XY Zhang </h3>
+                                <h3 class="typography-body block-link profile-name">Xiayan Zhang </h3>
                                 <h4 class="typography-body typography-profile-title">
-                                   Co-CEO <br> Director of Sale
+                                   Co-CEO <br> Director of Products
                                 </h4>
                             </figcaption>
                         </figure>
                     </a>
                 </li>
+
+                <li class="profile-list-item">
+                    
+                    <style type="text/css">                            
+                         .image-7b290186898785d598d6df391ed51cc8 {
+                             background-image: url(/about/wang.png);
+                             width: 230px;
+                             height: 178px;
+                             background-size: 230px 178px;
+                             background-repeat: no-repeat;
+         				}
+                         @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+                         only screen and (min-resolution: 1.5dppx),
+                         (-webkit-min-device-pixel-ratio: 1.5),
+                         (min-resolution: 144dpi) {
+                             .image-7b290186898785d598d6df391ed51cc8 {
+                                 background-image: url(/about/wang.png);
+                             }
+                         }
+                    </style>
+                    <a href="https://safe.cumt.edu.cn" target="_blank" class="block" data-analytics-region="learn more">
+                        <figure class="profile-image image-7b290186898785d598d6df391ed51cc8" role="presentation">
+                            <figcaption class="profile-caption">
+                                <h3 class="typography-body block-link profile-name">Shenglei Zhao </h3>
+                                <h4 class="typography-body typography-profile-title">
+                              	  Director of Sale
+                                </h4>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+		    
             </ul>
         </div>
         <div class="keyline"></div>
