--- a/about/about_us.html
+++ b/about/about_us.html
@@ -365,7 +365,7 @@
 		<li class="profile-list-item">                   
                     <style type="text/css">                            
                          .image-8957539aa282e1a6c74d9efeb1aa5b7e {
-                             background-image: url(/about/jia.png);
+                             background-image: url(/about/sun.png);
                              width: 230px;
                              height: 178px;
                              background-size: 230px 178px;
